--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE>
 <html>
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/styles/style.min.css">
 </head>
 <body>
-
+	<div class="wrapper gradient-background">
+	</div>
+	<div class="card">
+		<div class="content">
+			<div class="image-size">
+				<div class="image" style="background-image: url('https://scontent-sin1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/12122887_10205165911376506_15435186400365195_n.jpg?oh=a88e16f036e003919bd0bede532b858c&oe=575062E9');"></div>
+			</div>				
+			<div class="name">
+				Reza Arkan Partadiredja
+			</div>
+			<div class="nim">
+				12 / 333653 / TK / 39997
+			</div>
+			<div class="description">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+			</div>
+			<div class="social-media">
+				<a href="https://www.facebook.com/reza.partadiredja" target="_blank"><i class="fa fa-facebook-square"></i></a>
+				<a href="https://plus.google.com/+rezaarkan" target="_blank"><i class="fa fa-google-plus-square"></i></a>
+				<a href="https://twitter.com/rezaarkan" target="_blank"><i class="fa fa-twitter-square"></i></a>
+				<a href="https://www.instagram.com/rezaarkan/" target="_blank"><i class="fa fa-instagram"></i></a>
+				<a href="https://github.com/rezaarkan/" target="_blank"><i class="fa fa-github-square"></i></a>
+				<a href="https://id.linkedin.com/in/rezaarkan" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+			</div>
+		</div>
+	</div>
+	<div class="footer-text">
+		<a href="https://github.com/rezaarkan/tugasPJW-ProfileKelompok" target="_blank">Tugas PJW - Profile Kelompok, see on Github</a>
+	</div>
 </body>
 </html>
