--- a/views/index.html
+++ b/views/index.html
@@ -35,24 +35,21 @@
 		<div id="2" class="card">
 			<div class="content">
 				<div class="image-size">
-					<div class="image" style="background-image: url('https://scontent-sin1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/12122887_10205165911376506_15435186400365195_n.jpg?oh=a88e16f036e003919bd0bede532b858c&oe=575062E9');"></div>
+					<div class="image" style="background-image: url('http://i.newsarama.com/images/i/000/162/257/i02/deadpool-ver9-11e99.jpg?1452784920');"></div>
 				</div>				
 				<div class="name">
-					Gisella
+					Deadpool
 				</div>
 				<div class="nim">
 					12 / 333653 / TK / 39997
 				</div>
 				<div class="description">
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+					Deadpool (real name Wade Winston Wilson) is a fictional antihero appearing in American comic books published by Marvel Comics.
 				</div>
 				<div class="social-media">
 					<a href="https://www.facebook.com/reza.partadiredja" target="_blank"><i class="fa fa-facebook-square"></i></a>
 					<a href="https://plus.google.com/+rezaarkan" target="_blank"><i class="fa fa-google-plus-square"></i></a>
-					<a href="https://twitter.com/rezaarkan" target="_blank"><i class="fa fa-twitter-square"></i></a>
-					<a href="https://www.instagram.com/rezaarkan/" target="_blank"><i class="fa fa-instagram"></i></a>
 					<a href="https://github.com/rezaarkan/" target="_blank"><i class="fa fa-github-square"></i></a>
-					<a href="https://id.linkedin.com/in/rezaarkan" target="_blank"><i class="fa fa-linkedin-square"></i></a>
 				</div>
 			</div>
 		</div>
@@ -63,7 +60,7 @@
 					<div class="nim">12 / 333653 / TK / 39997</div>
 				</a></li>
 				<li><a class="js-navText" data-target="#2">
-					<div class="name">Reza Arkan Partadiredja</div>
+					<div class="name">Deadpool</div>
 					<div class="nim">12 / 333653 / TK / 39997</div>
 				</a></li>
 			</ul>
