Added new information

--- a/views/index.html
+++ b/views/index.html
@@ -35,21 +35,23 @@
 		<div id="2" class="card">
 			<div class="content">
 				<div class="image-size">
-					<div class="image" style="background-image: url('http://i.newsarama.com/images/i/000/162/257/i02/deadpool-ver9-11e99.jpg?1452784920');"></div>
+					<div class="image" style="background-image: url('https://fbcdn-photos-c-a.akamaihd.net/hphotos-ak-xtf1/v/t1.0-0/p206x206/11181723_10203570273372157_7323639219679412218_n.jpg?oh=eb45066fa2fa6d1a936b9b014b71b97c&oe=5769A5FC&__gda__=1464919300_e5b7722faa7c05e15effba0497af1e86');"></div>
 				</div>				
 				<div class="name">
-					Deadpool
+					Gisela Andhika Sari
 				</div>
 				<div class="nim">
-					12 / 333653 / TK / 39997
+					12 / 329910 / TK / 39123
 				</div>
 				<div class="description">
-					Deadpool (real name Wade Winston Wilson) is a fictional antihero appearing in American comic books published by Marvel Comics.
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
 				</div>
 				<div class="social-media">
-					<a href="https://www.facebook.com/reza.partadiredja" target="_blank"><i class="fa fa-facebook-square"></i></a>
+					<a href="https://www.facebook.com/dhika.siswosoebrotho" target="_blank"><i class="fa fa-facebook-square"></i></a>
 					<a href="https://plus.google.com/+rezaarkan" target="_blank"><i class="fa fa-google-plus-square"></i></a>
-					<a href="https://github.com/rezaarkan/" target="_blank"><i class="fa fa-github-square"></i></a>
+					<a href="https://www.instagram.com/rezaarkan/" target="_blank"><i class="fa fa-instagram"></i></a>
+					<a href="https://github.com/giselaandhika/" target="_blank"><i class="fa fa-github-square"></i></a>
+					<a href="https://id.linkedin.com/in/rezaarkan" target="_blank"><i class="fa fa-linkedin-square"></i></a>
 				</div>
 			</div>
 		</div>
@@ -60,8 +62,8 @@
 					<div class="nim">12 / 333653 / TK / 39997</div>
 				</a></li>
 				<li><a class="js-navText" data-target="#2">
-					<div class="name">Deadpool</div>
-					<div class="nim">12 / 333653 / TK / 39997</div>
+					<div class="name">Gisela Andhika Sari</div>
+					<div class="nim">12 / 329910 / TK / 39123</div>
 				</a></li>
 			</ul>
 		</div>
