Revised styling and js for navigation

--- a/views/index.html
+++ b/views/index.html
@@ -57,11 +57,11 @@
 		</div>
 		<div class="nav-text">
 			<ul>
-				<li class="active"><a class="js-navText" data-target="#1">
+				<li class="active js-navText"><a data-target="#1">
 					<div class="name">Reza Arkan Partadiredja</div>
 					<div class="nim">12 / 333653 / TK / 39997</div>
 				</a></li>
-				<li><a class="js-navText" data-target="#2">
+				<li class="js-navText"><a data-target="#2">
 					<div class="name">Gisela Andhika Sari</div>
 					<div class="nim">12 / 329910 / TK / 39123</div>
 				</a></li>
