--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 			<div class="content">
 				<div class="image-size">
 					<div class="image" style="background-image: url('https://scontent-sin1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/12122887_10205165911376506_15435186400365195_n.jpg?oh=a88e16f036e003919bd0bede532b858c&oe=575062E9');"></div>
-				</div>				
+				</div>
 				<div class="name">
 					Reza Arkan Partadiredja
 				</div>
@@ -36,7 +36,7 @@
 			<div class="content">
 				<div class="image-size">
 					<div class="image" style="background-image: url('https://fbcdn-photos-c-a.akamaihd.net/hphotos-ak-xtf1/v/t1.0-0/p206x206/11181723_10203570273372157_7323639219679412218_n.jpg?oh=eb45066fa2fa6d1a936b9b014b71b97c&oe=5769A5FC&__gda__=1464919300_e5b7722faa7c05e15effba0497af1e86');"></div>
-				</div>				
+				</div>
 				<div class="name">
 					Gisela Andhika Sari
 				</div>
@@ -55,6 +55,30 @@
 				</div>
 			</div>
 		</div>
+		<div id="3" class="card">
+			<div class="content">
+				<div class="image-size">
+					<div class="image" style="background-image:
+					url('https://lh3.googleusercontent.com/-QMgLJb4SgRg/VstVz0XD-II/AAAAAAAAA0E/weoJeqFtf0g/w140-h140-p/poto3.png');"></div>
+				</div>
+				<div class="name">
+					Muhammd Hanif Sugiyanto
+				</div>
+				<div class="nim">
+					14 / 365311 / TK / 42070
+				</div>
+				<div class="description">
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+				</div>
+				<div class="social-media">
+					<a href="https://www.facebook.com/muhammadhanif.sugiyanto" target="_blank"><i class="fa fa-facebook-square"></i></a>
+					<a href="https://plus.google.com/+hanifsgy" target="_blank"><i class="fa fa-google-plus-square"></i></a>
+					<a href="https://www.instagram.com/hanifsgy/" target="_blank"><i class="fa fa-instagram"></i></a>
+					<a href="https://github.com/hanifsgy/" target="_blank"><i class="fa fa-github-square"></i></a>
+					<a href="https://id.linkedin.com/in/hanifsgy" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+				</div>
+			</div>
+		</div>
 		<div class="nav-text">
 			<ul>
 				<li class="active js-navText"><a data-target="#1">
@@ -64,6 +88,9 @@
 				<li class="js-navText"><a data-target="#2">
 					<div class="name">Gisela Andhika Sari</div>
 					<div class="nim">12 / 329910 / TK / 39123</div>
+				<li class="js-navText"><a data-target="#3">
+					<div class="name">Muhammad Hanif Sugiyanto</div>
+					<div class="nim">14 / 365311 / TK / 42070</div>
 				</a></li>
 			</ul>
 		</div>
