Added social media links

--- a/views/index.html
+++ b/views/index.html
@@ -48,10 +48,11 @@
 				</div>
 				<div class="social-media">
 					<a href="https://www.facebook.com/dhika.siswosoebrotho" target="_blank"><i class="fa fa-facebook-square"></i></a>
-					<a href="https://plus.google.com/+rezaarkan" target="_blank"><i class="fa fa-google-plus-square"></i></a>
-					<a href="https://www.instagram.com/rezaarkan/" target="_blank"><i class="fa fa-instagram"></i></a>
+					<a href="https://plus.google.com/103904858624575440555" target="_blank"><i class="fa fa-google-plus-square"></i></a>
+					<a href="https://twitter.com/dhika1767" target="_blank"><i class="fa fa-twitter-square"></i></a>
+					<a href="https://www.youtube.com/channel/UCnGk7GgZaAx2jiKhutjjO2Q" target="_blank"><i class="fa fa-youtube-square"></i></a>
 					<a href="https://github.com/giselaandhika/" target="_blank"><i class="fa fa-github-square"></i></a>
-					<a href="https://id.linkedin.com/in/rezaarkan" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+					<a href="https://www.linkedin.com/in/gisela-andhika-sari-482aa9a4?trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square"></i></a>
 				</div>
 			</div>
 		</div>
