--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/styles/style.min.css">
 </head>
@@ -44,7 +45,7 @@
 					12 / 329910 / TK / 39123
 				</div>
 				<div class="description">
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+				はじめまして、私はギセラアンディカサリです。 ディカと呼んでください。 インドネシアからきました。 私はガジャーマダ大学の大学生です。 専門はコンピューターです。 どうぞよろしく、お願いします。
 				</div>
 				<div class="social-media">
 					<a href="https://www.facebook.com/dhika.siswosoebrotho" target="_blank"><i class="fa fa-facebook-square"></i></a>
